project-2/k8s/namespace.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices-app
