project-2/k8s/frontend-service.yaml
# frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: microservices-app
spec:
  selector:
    app: frontend-service
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
