project-2/k8s/redis-service.yaml
# redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: microservices-app
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
  type: ClusterIP
