project-2/k8s/worker-service.yaml
# worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-service
  namespace: microservices-app
spec:
  selector:
    app: worker-service
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
